<?xml version="1.0"?>
<package format="2">
  <name>Testbot</name>
  <version>0.0.0</version>
  <description>
    <p>URDF Description package for Testbot</p>
    <p>This package contains configuration data, 3D models and launch files
for Testbot robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>controller_manager</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>urdf</build_depend>
  
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>

  <export>
    <architecture_independent />
  </export>
</package>
