<?xml version="1.0"?>
<package format="2">
  <name>oparm_description</name>
  <version>0.0.1</version>
  <description>
    OROCA PANGYO oParm 3D model description for visualization and simulation
  </description>

  <!-- License -->
  <license>TODO</license>

  <!-- Author and maintainer -->
  <author email="danichoi737@gmail.com">Hyun Wook Choi</author>
  <maintainer email="danichoi737@gmail.com">Hyun Wook Choi</maintainer>

  <!-- URL -->
  <url type="website">http://www.oroca.org/</url>
  <url type="repository">https://github.com/orocapangyo/oParm</url>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_export_depend>urdf</build_export_depend>
  <exec_depend>urdf</exec_depend>

  <!-- Export -->
  <export>
  </export>
</package>
